force-app/main/default/objects/ampi__Indicator_Thematic_Area__c/ampi__Indicator_Thematic_Area__c.object-meta.xml
<CustomObject>
    <description>Mechanism to tag an indicator with a theme</description>
    <label>Indicator Thematic Area</label>
    <nameField>
        <displayFormat>ITA-{0000}</displayFormat>
        <label>Indicator Thematic Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indicator Thematic Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>