force-app/main/default/objects/ampi__Indicator_Thematic_Area__c/fields/ampi__Indicator__c.field-meta.xml
<CustomField>
    <fullName>ampi__Indicator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to specify the parent Indicator to this junction object</description>
    <label>Indicator</label>
    <referenceTo>ampi__Indicator__c</referenceTo>
    <relationshipLabel>Indicator Thematic Areas</relationshipLabel>
    <relationshipName>Indicator_Thematic_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>