force-app/main/default/objects/ampi__Indicator_Thematic_Area__c/fields/ampi__Required__c.field-meta.xml
<CustomField>
    <fullName>ampi__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to specify if the parent Indicator is required to be added to a project if the parent Thematic Area is added to that project.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>