force-app/main/default/objects/ampi__Indicator_Thematic_Area__c/fields/ampi__Thematic_Area__c.field-meta.xml
<CustomField>
    <fullName>ampi__Thematic_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to specify the parent Thematic Area to this junction object</description>
    <label>Thematic Area</label>
    <referenceTo>ampi__Thematic_Area__c</referenceTo>
    <relationshipLabel>Indicator Thematic Areas</relationshipLabel>
    <relationshipName>Indicator_Thematic_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>