force-app/main/default/objects/ampi__Indicator_Thematic_Area__c/fields/ampi__Thematic_Area_Icon_And_Text__c.field-meta.xml
<CustomField>
    <fullName>ampi__Thematic_Area_Icon_And_Text__c</fullName>
    <description>This formula field stores the icon and name of parent Thematic Area</description>
    <formula>ampi__Thematic_Area__r.ampi__Icon__c + &apos;#&apos; + ampi__Thematic_Area__r.ampi__Name_Translated__c</formula>
    <label>Thematic Area Icon And Text</label>
    <type>Text</type>
</CustomField>