force-app/main/default/objects/ampi__Indicator_Thematic_Area__c/fields/Indicator_Definition__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Definition__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; ampi__Indicator__r.Id,  ampi__Indicator__r.ampi__Description__c)</formula>
    <label>Indicator Definition</label>
    <type>Text</type>
</CustomField>