force-app/main/default/objects/ampi__Indicator_Thematic_Area__c/listViews/ampi__All.listView-meta.xml
<ListView>
    <fullName>ampi__All</fullName>
    <columns>ampi__Thematic_Area__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ampi__Indicator__c</columns>
    <columns>Indicator_Definition__c</columns>
    <columns>ampi__Required__c</columns>
    <columns>ampi__Thematic_Area_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>